--- a/朝花夕拾.md
+++ b/朝花夕拾.md
@@ -6,3 +6,20 @@
 
 类似的事情还有一个法国老师吭哧吭哧的用英语问了狄拉克一个问题，狄拉克也用用英语回答，过一阵子狄拉克妹妹来跟狄拉克说法语，狄拉克也说法语，法国老师不开心的说你会说法语怎么不跟我说啊，狄拉克说你没有问我呀
 
+狄拉克第一次遇到费曼的时候，在漫长的寂静之后 他说:“我有一个方程。你也有吗?”
+
+记者采访狄拉克：
+
+狄拉克教授，您作为量子力学创立者之一，有什么特别的感受吗
+
+木有
+
+您能简单的解释一下量子力学吗
+
+不能
+
+您有什么休闲的爱好吗
+
+走路
+
+就这样一个人说句子一个人说单词，聊了半天也没多少字，干脆借故离开了
