--- a/天文八卦.md
+++ b/天文八卦.md
@@ -1,1 +1,15 @@
-有个红外波段的空间望远镜叫WIRE
+
+Spitzer上天前叫 SIRTF
+
+之前有个望远镜叫WIRE，快门坏了，坏了后一直开着而且怎么这么巧对准了太阳，太阳把一个冷却罐儿烤化了开始喷气，反推着卫星转圈儿，直到彻底失控
+
+Spitzer上天前就收到WIRE项目组的做一个大天区巡天的申请，希望Spitzer帮忙实现梦想，就有了SWIRE巡天
+
+Spitzer在做的时候，快门开关了一会儿突然合不上了，失灵了，专家各种研究发现开关快门的时候一个电线里的电流磁化了一条金属，影响了快门的开关，解决办法是让电流不单向着流动，而是交替换方向，之后组织了十来个专家各种论证这个失灵原因，但是nasa还是决定不要快门了
+
+没有快门的话就没法做零秒曝光，而且一直读出探测器各个pixel的值，所以是对着一个椭圆星系拍了图像，对比椭圆星系的别的波段的形态和观测到的pixel的值得关系计算pixel之间响应的差别，得到平场
+
+Spitzer定标是用的恒星，对于展源是不准的
+
+Spitzer观测的时候也没有背景数据，所以就盯着源看一会儿，盯着一个比较黑的天区看一会儿，用这个黑的区域做仪器响应之类的校准，这个天区叫做 dark field，有着Spitzer上天以来的大量光变数据，严老师从光变数据里分析出来了往年的超新星
+
