--- a/朝花夕拾.md
+++ b/朝花夕拾.md
@@ -1,3 +1,5 @@
-狄拉克喜欢静静的思考
+狄拉克喜欢静静的思考，思考累了回去后院把一小车石头一趟趟地推上土坡
 
-狄拉克思考累了回去后院把一小车石头一趟趟地推上土坡
+修高等电动力学的时候，讲到Jackson的经典电动力学第14章左右，有一个电子散射的习题最终是个积分，我怎么都积不出来，老师说积分可以查表啊，我查了一些表，发现科大出的一本蓝色封面积分手册有这个结果
+
+狄拉克弄出来一种统计的时候，不知道费米也弄出来了，后来称之为费米-狄拉克统计
