--- a/朝花夕拾.md
+++ b/朝花夕拾.md
@@ -1,5 +1,17 @@
 狄拉克喜欢静静的思考，思考累了回去后院把一小车石头一趟趟地推上土坡
 
-修高等电动力学的时候，讲到Jackson的经典电动力学第14章左右，有一个电子散射的习题最终是个积分，我怎么都积不出来，老师说积分可以查表啊，我查了一些表，发现科大出的一本蓝色封面积分手册有这个结果
-
 狄拉克弄出来一种统计的时候，不知道费米也弄出来了，后来称之为费米-狄拉克统计
+
+Sidney Coleman  可能算是过去40年最优秀的场论专家之一，也许那个之一甚至可以被去掉。
+
+大约是70年代末，那时候哈佛的物理系理论组经常会有个seminar,温伯格格拉肖等人经常聚在一起讨论问题，sidney当然也是其中一员，但问题是他每天都睡到11:30,而seminar是12点到一点，所以sidney很少有不迟到的时候。某一天，他们快讨论完了，sidney还没到，这时候有个年轻人问了温伯格一个问题，weinberg想了想说，“这问题很有意思，但我不知道答案”。这个时候sidney正好走进来，听见了weinberg的话，然后说"我知道答案，现在你只要告诉我问题是什么" 。
+
+他是对的，虽然他还不知道问题是什么，但当他听完问题后，他给出了正确的答案。
+
+Sidney 颇有几句名言
+
+"Modesty forbids me but honesty compels me "
+
+“If I have seen further than others, it is because I was standing in between the shoulders of dwarfs.”
+
+修高等电动力学的时候，讲到Jackson的经典电动力学第14章左右，有一个电子散射的习题最终是个积分，我怎么都积不出来，老师说积分可以查表啊，我查了一些表，发现科大出的一本蓝色封面积分手册有这个结果
