--- a/老杨的传说.md
+++ b/老杨的传说.md
@@ -1,16 +1,15 @@
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨的传说（序）
+
 发信站: BBS 科苑星空站 (Sat Jan 6 00:55:23 2007), 站内
 
-听大宝的安排，先写个序给大伙交代一下，希望以后可以拍得轻一些。说实话，文章还
-没开始写，就来写个序是一件很危险的事。
-本来说是八卦的，最近发觉做人还是正经一点好，把八婆口中的八卦写下来，也就成了
-传说。中国人写东西从来没有献给某某的习惯，但我还是想献给大宝，凯丁和西斯亚斯
-，没有他们的帮助，此文实质上是不可能完成的。
-至于对杨先生的称呼，本来是想用杨老的，但因经常有“杨老说”的句子，不够顺畅，
-辄改为老杨说。其实老杨在我心中一点都不老。
+听大宝的安排，先写个序给大伙交代一下，希望以后可以拍得轻一些。说实话，文章还没开始写，就来写个序是一件很危险的事。本来说是八卦的，最近发觉做人还是正经一点好，把八婆口中的八卦写下来，也就成了传说。中国人写东西从来没有献给某某的习惯，但我还是想献给大宝，凯丁和西斯亚斯，没有他们的帮助，此文实质上是不可能完成的。至于对杨先生的称呼，本来是想用杨老的，但因经常有“杨老说”的句子，不够顺畅，辄改为老杨说。其实老杨在我心中一点都不老。
+
 发信人: neil (反面教材), 信区: Physics
+
 标 题: 关于老杨的传说
+
 发信站: BBS 科苑星空站 (Sat Jan 6 22:05:31 2007), 站内
 
 
@@ -20,132 +19,132 @@ cuimengdao要写的这个《老杨的传说》，是neil跟他特约的。
 
 鉴于杨振宁在国内是有些争议的，所以我还是事先说两句吧：
 
-1。杨振宁是一位非常非常出色的理论物理学家。接触和了解他的生平，工作细节，
-哪怕只是八卦，对于我们这些后辈而言也将会是很有帮助的。
+1。杨振宁是一位非常非常出色的理论物理学家。接触和了解他的生平，工作细节，哪怕只是八卦，对于我们这些后辈而言也将会是很有帮助的。
 
-2。这个世界能够记住的，是一个人真正体现他价值的地方。对于一名物理学家而言，
-体现他价值的地方就是他对物理的理解和他的物理工作。对于他除物理以外的个人生活，
-从来都不应当是我们关注的焦点。
+2。这个世界能够记住的，是一个人真正体现他价值的地方。对于一名物理学家而言，体现他价值的地方就是他对物理的理解和他的物理工作。对于他除物理以外的个人生活，从来都不应当是我们关注的焦点。
 
-所以，对于那些具有fq特质的同学，我建议您出门转左－－Chinastrategy，在那里您会
-遇到更多的知音。而对于那些有着像街边老太太一样喜欢对别人的私生活品头论足习惯
-的同学，请您出门转右－－Gossip版,谢谢合作^_^
+所以，对于那些具有fq特质的同学，我建议您出门转左－－Chinastrategy，在那里您会遇到更多的知音。而对于那些有着像街边老太太一样喜欢对别人的私生活品头论足习惯的同学，请您出门转右－－Gossip版,谢谢合作^_^
+
 。。。。
 
 3。天下第七你要好好写噢，要不然回头罚你请我吃雪糕：）
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨的面经（1）
+
 发信站: BBS 科苑星空站 (Sat Jan 6 01:13:35 2007), 站内
 
-当年老杨在芝加哥做实验做不下去，找Eward Teller,想保送读他的博士。记得Teller当
-时腿有点瘸，叫杨扶他下楼，先聊了一会家常，忽问杨：“氢原子的基态波函数是什么？”老杨不愧是老杨
-，想都不想就把答案崩出来。老奸巨猾的Teller微微一笑，抽了一口旱烟，眼角的皱纹
-掩饰不住喜意：“好吧，就来跟我吧。”杨扶着Teller继续走，只觉得自己迈出的每一
-步都在Teller的前一步和后一步之间，二人自此形成了可怕的默契。
-P.S.俺第一次看到这个八卦，想了十分钟，想出了一个似是而非的答案，回去查书查了
-大半天才想清楚了氢原子的基态波函数，无地自容ing...........
+当年老杨在芝加哥做实验做不下去，找Eward Teller,想保送读他的博士。记得Teller当时腿有点瘸，叫杨扶他下楼，先聊了一会家常，忽问杨：“氢原子的基态波函数是什么？”老杨不愧是老杨，想都不想就把答案崩出来。老奸巨猾的Teller微微一笑，抽了一口旱烟，眼角的皱纹掩饰不住喜意：“好吧，就来跟我吧。”杨扶着Teller继续走，只觉得自己迈出的每一步都在Teller的前一步和后一步之间，二人自此形成了可怕的默契。
+
+P.S.俺第一次看到这个八卦，想了十分钟，想出了一个似是而非的答案，回去查书查了大半天才想清楚了氢原子的基态波函数，无地自容ing...........
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨的面经(2)
+
 发信站: BBS 科苑星空站 (Sat Jan 6 01:57:16 2007), 站内
 
-等到老杨成了牛牛，面试别人了。那个人也是个少年天才，无论杨问什么波函数，都答
-得头头是道，当Teller的博士那是绝对没问题的。可是
-老杨不太厚道，最后问了一个：“你觉得量子力学里最妙的什么？”终于把少年天才给
-问晕了，保送未遂，至今下落不明啊……
+等到老杨成了牛牛，面试别人了。那个人也是个少年天才，无论杨问什么波函数，都答得头头是道，当Teller的博士那是绝对没问题的。可是老杨不太厚道，最后问了一个：“你觉得量子力学里最妙的什么？”终于把少年天才给问晕了，保送未遂，至今下落不明啊……
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨的鬼才(3)
+
 发信站: BBS 科苑星空站 (Sat Jan 6 14:10:03 2007), 站内
 
-记得有一次纪念Dirac的演讲，老杨说从经典物理到量子物理，数学上就是把实数扩展为
-复数（经典物理中也可用复数，但不是绝对必须），他想更进一步，把量子力学的复数
-扩展为四元数（z=a+bi+cj+dk）。如果作出来可与他从U(1)到SU(2)的推广媲美。当时吓
-我一跳，心想这书还怎么读啊……查了杨以后的文章似乎没真的做出来，就当他是吹牛
-了。后来无意看到张守晟（老杨的博士生）01年Science的文章，把量子Hall效应推广到
-四维空间，用的就是四元数，里面包藏的正是统一量子力学和广义相对论的狼子野心。
+记得有一次纪念Dirac的演讲，老杨说从经典物理到量子物理，数学上就是把实数扩展为复数（经典物理中也可用复数，但不是绝对必须），他想更进一步，把量子力学的复数扩展为四元数（z=a+bi+cj+dk）。如果作出来可与他从U(1)到SU(2)的推广媲美。当时吓我一跳，心想这书还怎么读啊……查了杨以后的文章似乎没真的做出来，就当他是吹牛了。后来无意看到张守晟（老杨的博士生）01年Science的文章，把量子Hall效应推广到四维空间，用的就是四元数，里面包藏的正是统一量子力学和广义相对论的狼子野心。
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨和他爸（4）
+
 发信站: BBS 科苑星空站 (Sat Jan 6 23:40:12 2007), 站内
 
-老杨十二岁有半时，照了一张相，用粤语形容就是靓到绝。他爸越看越得意，在后面写
-下一行字：
+老杨十二岁有半时，照了一张相，用粤语形容就是靓到绝。他爸越看越得意，在后面写下一行字：
+
 振宁似有异禀……
+
 真是暗爽到内伤。
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨和他爸（5）
+
 发信站: BBS 科苑星空站 (Sat Jan 6 23:42:44 2007), 站内
 
-还好他爸不愧为芝加哥数学博士，定力够强，忍住没有马上教杨微积分，而是请了人来
-让他背了整本《孟子》。
+还好他爸不愧为芝加哥数学博士，定力够强，忍住没有马上教杨微积分，而是请了人来让他背了整本《孟子》。
 
-老杨一辈子都感激他爸这个选择。他爸是忍到杨做本科毕业论文时才拿出《Modern Algebraic Theories》(Dickson写的，是他爸的博士导师)，其中用二十页就教会了杨的群
-论。
+老杨一辈子都感激他爸这个选择。他爸是忍到杨做本科毕业论文时才拿出《Modern Algebraic Theories》(Dickson写的，是他爸的博士导师)，其中用二十页就教会了杨的群论。
 
 大宝，学学吧，这才真的是经典教材～～～
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨的英文（6）
+
 发信站: BBS 科苑星空站 (Sun Jan 7 13:40:38 2007), 站内
 
-老杨当年没考四六级，可是英文的天赋确实惊人。看他传世名句：Symmetry dictates
-interaction.如果能体味到dictate一词的微妙，英文可说已登堂入室。
-71年回国，重新看到伟大的长城，激动到泪流满面，写下了：
-It's simple and strong.此二形容词下得犹为精到。
+老杨当年没考四六级，可是英文的天赋确实惊人。看他传世名句：Symmetry dictates interaction.如果能体味到dictate一词的微妙，英文可说已登堂入室。71年回国，重新看到伟大的长城，激动到泪流满面，写下了：It's simple and strong.此二形容词下得犹为精到。
+
 老杨一次兴起，译了老杜的诗：文章千古事，得失寸心知。
+
 A piece of literature
+
 Is meant for the millennium.
+
 But its ups and downs are known
+
 Already in the author's heart.
 
+
+
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨和Mills（7）
+
 发信站: BBS 科苑星空站 (Mon Jan 8 17:35:05 2007), 站内
 
 Yang-Mills理论初传入国门时，有媒体报道为“杨氏磨坊”理论。。。
 
-Mills一辈子就做了这个咚咚，每次有新学生见到他，总是问：“您就是Yang-Mills理论
-的那个Mills吗……”
+Mills一辈子就做了这个咚咚，每次有新学生见到他，总是问：“您就是Yang-Mills理论的那个Mills吗……”
 
 05年Mills走了，老杨在Physics Today写了个怀念文章，有空可读读。
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨和Fermi（8）
+
 发信站: BBS 科苑星空站 (Tue Jan 9 18:47:19 2007), 站内
 
-老杨去美国第一就是想投奔Fermi(Fermi当时失踪)，第二想投奔Wigner（Wigner在prin
-ceton休假一年）。
+老杨去美国第一就是想投奔Fermi(Fermi当时失踪)，第二想投奔Wigner（Wigner在princeton休假一年）。
 
-很奇怪，老杨只和Fermi发过一篇文章，不过在杨的文章里面，这个工作是相当大胆的，
-猜测性很强，提出的问题可以说今天还没有真正得到解决，去年高能所据说找到了Ferm
-i-Yang粒子，就是这个咚咚～～
+很奇怪，老杨只和Fermi发过一篇文章，不过在杨的文章里面，这个工作是相当大胆的，猜测性很强，提出的问题可以说今天还没有真正得到解决，去年高能所据说找到了Fermi-Yang粒子，就是这个咚咚～～
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨和Wigner(9)
+
 发信站: BBS 科苑星空站 (Wed Jan 10 20:25:50 2007), 站内
 
-Wigner跟老杨感叹Fermi关于beta decay的文章（可说是现代粒子物理场论的基础）太诡
-异，用一个费米子产生算符就产生出费米子来了，老杨听了也觉得很诡异，跟Wigner说
-：费米子算符（反对易）不是你和Jordan整出来的么？
+Wigner跟老杨感叹Fermi关于beta decay的文章（可说是现代粒子物理场论的基础）太诡异，用一个费米子产生算符就产生出费米子来了，老杨听了也觉得很诡异，跟Wigner说：费米子算符（反对易）不是你和Jordan整出来的么？
 
 Wigner答道：是啊，可是我做梦都没想到跟现实有任何关系。
 
 P.S.顺路恭喜一下大宝，你跟老杨看过相同的书了。
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨和吴大猷（10）
+
 发信站: BBS 科苑星空站 (Thu Jan 11 17:57:40 2007), 站内
 
-老杨的本科毕业论文就是跟吴做的，吴给他一篇RMP上的文章（Rev. Mod. Phys. 8, 31
-7-346 (1936),有兴趣可以自己去下下～～），用群论算多原子分子光谱，老杨自此玩上
-了群论和对称性。到了吴过九十岁大寿时，老杨为报答当年之恩，专门用群论算了一下
-C60（对称性高～）的振动谱，还发了一篇Phys.Lett.A～～～
+老杨的本科毕业论文就是跟吴做的，吴给他一篇RMP上的文章（Rev. Mod. Phys. 8, 317-346 (1936),有兴趣可以自己去下下～～），用群论算多原子分子光谱，老杨自此玩上了群论和对称性。到了吴过九十岁大寿时，老杨为报答当年之恩，专门用群论算了一C60（对称性高～）的振动谱，还发了一篇Phys.Lett.A～～～
 
 发信人: neil (反面教材), 信区: Physics
+
 标 题: 老杨和吴大猷（10）-附件
+
 发信站: BBS 科苑星空站 (Fri Jan 12 18:53:58 2007), 站内
 
 附件里是老杨给吴祝九十大寿时发的PRA
@@ -159,122 +158,117 @@ cuimengdao那小子对BBS贴附件不太熟，所以就我来吧。
 : C60（对称性高～）的振动谱，还发了一篇Phys.Lett.A～～～
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨和Luttinger(11)
+
 发信站: BBS 科苑星空站 (Fri Jan 12 19:57:05 2007), 站内
 
-他俩很有缘分，大家都还没成名的时候，Luttinger就在火车站用十五分钟告诉了老杨O
-nsager解的诀窍，为老杨的beta=1/8做了历史性的贡献。对了，还有一个贡献，杨第一
-次在美国撞见杜致礼时正跟Luttinger在喝咖啡，叫杜致礼为“肚子里”。
+他俩很有缘分，大家都还没成名的时候，Luttinger就在火车站用十五分钟告诉了老杨Onsager解的诀窍，为老杨的beta=1/8做了历史性的贡献。对了，还有一个贡献，杨第一次在美国撞见杜致礼时正跟Luttinger在喝咖啡，叫杜致礼为“肚子里”。
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨和Anderson(12)
+
 发信站: BBS 科苑星空站 (Sat Jan 13 22:26:35 2007), 站内
 
-记得有一次的世界物理大会，老杨和P.W.Anderson都参加了。以老杨的江湖地位，无论
-参加什么会议那总是默认第一个做大会报告的~~。可是Anderson也老了，也是天字第一
-号的人物。文无第一，武无第二，世外高人们压根不会去计较这些（这又不是拿炸药奖
-的次序）。结果Anderson先上去讲了，第一张PPT，就打出和老杨当年的合影，大家先叙
-了半天旧，想一下当年……下面坐着两百多个物理学家。
+记得有一次的世界物理大会，老杨和P.W.Anderson都参加了。以老杨的江湖地位，无论参加什么会议那总是默认第一个做大会报告的 ~~ 。 可是Anderson也老了，也是天字第一号的人物。文无第一，武无第二，世外高人们压根不会去计较这些（这又不是拿炸药奖的次序）。结果Anderson先上去讲了，第一张PPT，就打出和老杨当年的合影，大家先叙了半天旧，想一下当年……下面坐着两百多个物理学家。
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨说paper(13)
+
 发信站: BBS 科苑星空站 (Sun Jan 14 18:57:55 2007), 站内
 
 老杨说:
 
-“在国内看到Phys.Rev上一篇文章就话力气去念，往往是很吃亏的。很多文章是这样的
-，A写篇文章，B说不对，去修改一下，C说B不对，又去修改一下。你去看了C的文章，就
-会困扰在别人没有根据的胡思乱想中。对待这种事情的办法，应该是去研究一下原来的
-实验。如果我决定去研究它，我就一定从头做起，而且不去看别人的文章。做了一段时
-间，觉得有困难了，再去看别人的文章。这样才能很好的吸收别人的东西。如果一开始
-就跟着别人跑，可能有些最大的问题，你不去问了。”
+“在国内看到Phys.Rev上一篇文章就话力气去念，往往是很吃亏的。很多文章是这样的，A写篇文章，B说不对，去修改一下，C说B不对，又去修改一下。你去看了C的文章，就会困扰在别人没有根据的胡思乱想中。对待这种事情的办法，应该是去研究一下原来的实验。如果我决定去研究它，我就一定从头做起，而且不去看别人的文章。做了一段时间，觉得有困难了，再去看别人的文章。这样才能很好的吸收别人的东西。如果一开始就跟着别人跑，可能有些最大的问题，你不去问了。”
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨和他的照片（14）
+
 发信站: BBS 科苑星空站 (Mon Jan 15 16:48:57 2007), 站内
 
-老杨在Princeton时，名记者R.Kelley要为他拍照，老杨赶紧要去收拾桌子上如山的预印
-本（当年还没arxiv这玩样，老杨的桌面极壮观……），被Kelley阻止。等到Kelley拍的
-相洗出来，老杨看完叹了一句：“我知道为什么他是记者，而我不是了。”
+老杨在Princeton时，名记者R.Kelley要为他拍照，老杨赶紧要去收拾桌子上如山的预印本（当年还没arxiv这玩样，老杨的桌面极壮观……），被Kelley阻止。等到Kelley拍的相洗出来，老杨看完叹了一句：“我知道为什么他是记者，而我不是了。”
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨和Oppenheimer（15）
+
 发信站: BBS 科苑星空站 (Tue Jan 16 19:42:24 2007), 站内
 
 老奥这人喜欢说一些死无对证的话，
+
 比如：“五十年代是杨的天下。”
+
 又比如：“李比上帝还聪明。”
+
 有时还说：“我最喜欢看李和杨在princeton的草坪上讨论物理……”
+
 等到老奥出了事，想把princeton的第一把交椅传给老杨，可惜老杨跑过去石溪了～～
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨去理发（16）
+
 发信站: BBS 科苑星空站 (Wed Jan 17 18:31:59 2007), 站内
 
-据黄克孙（Kerson Huang）的回忆，老杨兴高采烈的对他说：“当我理发时，产生了一
-个想法。我想所有基本粒子都好像固体的元激发，它们彼此间像声子－声子一样的相互
-作用，刚好表示它们还不基本。我相信这是正确的，但我不知道如何去证明它。”
+据黄克孙（Kerson Huang）的回忆，老杨兴高采烈的对他说：“当我理发时，产生了一个想法。我想所有基本粒子都好像固体的元激发，它们彼此间像声子－声子一样的相互作用，刚好表示它们还不基本。我相信这是正确的，但我不知道如何去证明它。”
 
-四十多年过去了，这一想法仍然没有得到充分的发挥，有趣的是文小刚在这个idea上做
-了很多让他暴得大名的工作～～
+四十多年过去了，这一想法仍然没有得到充分的发挥，有趣的是文小刚在这个idea上做了很多让他暴得大名的工作～～
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨和文小刚（17）
+
 发信站: BBS 科苑星空站 (Thu Jan 18 18:13:45 2007), 站内
 
 俺甚至不知道他俩见过面没有～～纯属猜测……
 
-老文整本量子多体理论出发点（也是强调了无数次的～～）就是老杨理发时所想的，再
-把它推到极端，不只是基本粒子不基本，连老杨的规范对称性（老文叫规范结构）也不
-是基本的，而是动力学演生出来的，并且自己构造了一些生硬的model，起了一个可怕的
-名称string-net condensation……估计这下老杨也不大高兴了～～
+老文整本量子多体理论出发点（也是强调了无数次的～～）就是老杨理发时所想的，再把它推到极端，不只是基本粒子不基本，连老杨的规范对称性（老文叫规范结构）也不是基本的，而是动力学演生出来的，并且自己构造了一些生硬的model，起了一个可怕的名称string-net condensation……估计这下老杨也不大高兴了～～
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨和Dirac（18）
+
 发信站: BBS 科苑星空站 (Fri Jan 19 18:45:21 2007), 站内
 
-老杨某方面的风格很像Dirac（某方面非常不像～～），Dirac看了杨和吴大峻（T.T.Wu
-）不可积相因子的文章后，说了一句：“这个工作应该是我做的。”这可能是老杨听到
-最好的赞美了。
+老杨某方面的风格很像Dirac（某方面非常不像～～），Dirac看了杨和吴大峻（T.T.Wu）不可积相因子的文章后，说了一句：“这个工作应该是我做的。”这可能是老杨听到最好的赞美了。
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨和丘成桐（19）
+
 发信站: BBS 科苑星空站 (Sun Jan 21 22:42:16 2007), 站内
 
-老丘的文言文和老杨有一拼，据说老丘主要修炼左传和史记，老杨功夫比较深的可能是
-孟子和唐诗～～俺在浙大数学中心看到丘写的序，惊为天人，真没想到丘的骈体文写得
-那么牛，四六句哗啦啦流出来……
+老丘的文言文和老杨有一拼，据说老丘主要修炼左传和史记，老杨功夫比较深的可能是孟子和唐诗～～俺在浙大数学中心看到丘写的序，惊为天人，真没想到丘的骈体文写得那么牛，四六句哗啦啦流出来……
 
-老丘因为弦论而在理论物理界暴得大名，他看到老杨也写过一篇弦论有关的文章，非常
-high,可是后来老杨并没有收进文集里，老丘问为什么，老杨答道：“我不认为它是对的
-。”
+老丘因为弦论而在理论物理界暴得大名，他看到老杨也写过一篇弦论有关的文章，非常high,可是后来老杨并没有收进文集里，老丘问为什么，老杨答道：“我不认为它是对的。”
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨和Schwinger（20）
+
 发信站: BBS 科苑星空站 (Tue Jan 23 01:35:24 2007), 站内
 
-老施讨论CPT联合变换的文章还没出来之前，把预印本寄给老杨。老杨这次却是看走眼了
-，写了一封信去跟老施argue说，没有理由结合T来联合操作。老杨后来一直后悔错过发
-现CPT定理。真是人心不足蛇吞象啊……好像是在说，要是我再把握好一点的话，别说二
-十八岁的，十八岁的都没问题～～
+老施讨论CPT联合变换的文章还没出来之前，把预印本寄给老杨。老杨这次却是看走眼了，写了一封信去跟老施argue说，没有理由结合T来联合操作。老杨后来一直后悔错过发现CPT定理。真是人心不足蛇吞象啊……好像是在说，要是我再把握好一点的话，别说二十八岁的，十八岁的都没问题～～
 
 发信人: cuimengdao (天下第七), 信区: Physics
+
 标 题: 老杨和Gell-mann（21）
+
 发信站: BBS 科苑星空站 (Wed Jan 24 16:31:52 2007), 站内
 
-老盖这人特别狂，年轻的时候一直嚷嚷李和杨抄了他的idea，气得李和杨写了一封警告
-信给他，才封住他的嘴。到了大家都老了，功成名就了，老盖却似乎过谦了，在老杨生
-日上，他说：“我所做的只是把老杨的SU(2)推广到SU(3)而已。”
+老盖这人特别狂，年轻的时候一直嚷嚷李和杨抄了他的idea，气得李和杨写了一封警告信给他，才封住他的嘴。到了大家都老了，功成名就了，老盖却似乎过谦了，在老杨生日上，他说：“我所做的只是把老杨的SU(2)推广到SU(3)而已。”
 
+=====================
 
 Everett (╮(╯▽╰)╭~(=￣ U ￣=)~) 组长 2009-08-25 06:33:55
 
-等到老杨成了牛牛，面试别人了。那个人也是个少年天才，无论杨问什么波函数，都答
-得头头是道，当Teller的博士那是绝对没问题的。可是
-老杨不太厚道，最后问了一个：“你觉得量子力学里最妙的什么？”终于把少年天才给
-问晕了，保送未遂，至今下落不明啊……
-
-=====================
+;等到老杨成了牛牛，面试别人了。那个人也是个少年天才，无论杨问什么波函数，都答
+;得头头是道，当Teller的博士那是绝对没问题的。可是
+;老杨不太厚道，最后问了一个：“你觉得量子力学里最妙的什么？”终于把少年天才给
+;问晕了，保送未遂，至今下落不明啊……
 
 这道题的答案是：“相位”。这是老杨上课的时候告诉我们的。
 
