--- a/老爱的八卦.md
+++ b/老爱的八卦.md
@@ -59,11 +59,7 @@
 
 日子定好的又不能改，主办方就有些着急，不知道咋办才好。
 
-这时候老司机主动找老爱，说：爱因斯坦先生，我已经听过您很多次报告了，对您报告
-
-的内容我相当的熟悉，我甚至可以一字不差的复述。所以就请允许我替您做一次报告吧
-
-，反正这个地方没有人见过您。
+这时候老司机主动找老爱，说：爱因斯坦先生，我已经听过您很多次报告了，对您报告的内容我相当的熟悉，我甚至可以一字不差的复述。所以就请允许我替您做一次报告吧，反正这个地方没有人见过您。
 
 老爱一听：哇赛，有意思邪！！
 
@@ -81,9 +77,7 @@ perfect！
 
 这让台上台下都捏了一把汗。
 
-不过那老司机灵机一动，指着台下的老爱说：你的这个问题太easy了。就让我的司机代
-
-替我回答吧。
+不过那老司机灵机一动，指着台下的老爱说：你的这个问题太easy了。就让我的司机代替我回答吧。
 
 老爱马上接过话题：事实上你的问题在于。。。。。
 
@@ -91,7 +85,7 @@ perfect！
 
 呵呵，我估计这事儿也就老外能干得出来。
 
-
+------------------------
 
 标 题: 讲个老爱的八卦笑话（3）
 
@@ -109,9 +103,7 @@ perfect！
 
 他往里一看，只见老爱和所有的学生都岔开腿坐在桌子上，每人抱着一本书。
 
-老爱极其温柔的对学生说：咳咳，其实也没什么好讲的，书里已经说得很明白了，
-
-课后题也没有讲的必要，因为答案就在书后面，你们自己做完了可以去查。
+老爱极其温柔的对学生说：咳咳，其实也没什么好讲的，书里已经说得很明白了，课后题也没有讲的必要，因为答案就在书后面，你们自己做完了可以去查。
 
 基本上就是这样了。
 
@@ -119,15 +111,13 @@ perfect！
 
 汗，难怪人都说老爱当老师不咋地。。。。。。。
 
-
+------------------------
 
 标 题: 讲个老爱的八卦笑话（4）
 
 发信站: BBS 科苑星空站 (Sun May 21 22:50:59 2006), 站内
 
-老爱在大概16岁的时候就读过康德的《纯粹理性批判》
-
-（当然是德文版的）
+老爱在大概16岁的时候就读过康德的《纯粹理性批判》（当然是德文版的）
 
 后人把这件事当作老爱非凡天赋的早期表现。
 
@@ -169,7 +159,7 @@ to experience,and with experience all our knowledge begins.
 
 兄弟我现在准备把后半生学习英语的目标定格在看懂这本书上：（
 
-
+------------------------
 
 标 题: 讲个老爱的八卦笑话（5）
 
@@ -185,7 +175,7 @@ to experience,and with experience all our knowledge begins.
 
 （10个男生＋1个女生：这个女生当然就是米列娃了）
 
-
+------------------------
 
 发信人: neil (反面教材), 信区: Physics
 
@@ -203,9 +193,7 @@ to experience,and with experience all our knowledge begins.
 
 比如：
 
-他在中学时因为性格内向，一度和老师同学相处得很糟糕，在加上身在异地，思念家人，
-
-最后使得他不得不中途辍学。
+他在中学时因为性格内向，一度和老师同学相处得很糟糕，在加上身在异地，思念家人，最后使得他不得不中途辍学。
 
 由于没有拿到中学毕业证，他失去了报考德国大学的机会，所以只好改考瑞士的苏黎世工业大学。
 
@@ -287,7 +275,7 @@ to experience,and with experience all our knowledge begins.
 
 梦里梦到了以前的一些场景，梦到了曾经经历过的那无数无知的人们对理想主义的指责和贬低。所以中插这么一篇，老爱的八卦，明天再继续。
 
-
+------------------------
 
 标 题: 讲个老爱的八卦笑话（7）
 
@@ -341,7 +329,7 @@ to experience,and with experience all our knowledge begins.
 
 
 
-
+------------------------
 
 标 题: 讲个老爱的八卦笑话（8）
 
@@ -403,85 +391,19 @@ to experience,and with experience all our knowledge begins.
 
 英文版的可能读得更爽，但是我手头没有，讲究看吧：）
 
-（一）当我受到经验的教训之后，才深悟得日常生活中所习见的一切东
+（一）当我受到经验的教训之后，才深悟得日常生活中所习见的一切东西，都是虚幻的、无谓的，并且我又确见到一切令我恐惧的东西，除了我的心灵受它触动外，其本身既无所谓善，亦无所谓恶，因此最后我就决意探究是否有一个人人都可以分享的真正的善，它可以排除其他的东西，单独地支配心灵。这就是说，我要探究究竟有没有一种东西，一经发现和获得之后，我就可以永远享有连续的、无上的快乐。
 
-西，都是虚幻的、无谓的，并且我又确见到一切令我恐惧的东西，除了我的
+（二）我说“最后我就决意”这样做，因为初看起来，放弃确实可靠的东西，去追求那还不确定的东西，未免太不明智。我明知荣誉和财富的利益，倘若我要认真地去从事别的新的探讨，我就必须放弃对于这些利益的寻求。假如真正的最高幸福在于荣誉和财富，那末，我岂不是交臂失之，但假如真正的最高幸福不在于荣誉、财富，而我用全副精力去寻求它们，那末我也同样得不到最高的幸福。
 
-心灵受它触动外，其本身既无所谓善，亦无所谓恶，因此最后我就决意探究
+（三）因此我反复思索有没有可能找到一种新的生活目标，或者至少确定有没有新的生活目标的存在，而不致改变我素常生活的秩序和习惯，这是我所屡次尝试的，但总是没有成效。因为那些在生活中最常见，并且由人们的行为所表明，被当作是最高幸福的东西，归纳起来，大约不外三项：财富、荣誉、感官快乐。萦扰人们的心灵，使人们不能想到别的幸福的，就是这三种东西。
 
-是否有一个人人都可以分享的真正的善，它可以排除其他的东西，单独地支
+（四）当人心沉溺于感官快系，直到安之若素，好象获得了真正的幸福时，它就会完全不能想到别的东西。但是当这种快乐一旦得到满足时，极大的苦恼立刻就随之而生。这样一来，人的心灵即使不完全丧失它的灵明，也必会感到困惑而拙钝。对于荣誉与财富的追求，特别是把它们当作自身目的，最足以使人陷溺其中，因为那样它们就被当作最高的善。
 
-配心灵。这就是说，我要探究究竟有没有一种东西，一经发现和获得之后，
+（五）然而人心陷溺于荣誉的追求，特别强烈，因为荣誉总是被认为本身自足的善，为一切行为所趁赴的最后目的。而且我们获得荣誉与财富，不象获得感官快乐那样立刻就有苦恼与悔恨相随；反之，荣誉、财富获得愈多，则我们的愉快愈大，因而我们想要增加荣誉、财富的念头也就愈强烈。但是当我们的希望一旦感到沮丧时，极大的苦恼便跟着发生。荣誉还有一种缺点，就是为了追求荣誉，我们必须完全按照人们的意见生活，追求人们通常所追求的东西，规避人们通常所规避的东西。
 
-我就可以永远享有连续的、无上的快乐。
+（六）现在我既然见到，所有这些东西实在是寻求别的新生活目标的障碍，而且不仅是障碍，实在是和它正相反对，势不两立，二者必去其一，因此我不能不考察一下，究竟哪一个对于我比较有益；因的，象前面所说过的，我好象是自愿放弃确定的善而去追求那不确定的东西。但是当我仔细思考之后，才确切地见到如果我放弃这些东西，来从事新的生活目标的探求，则我所放弃的就是按本性说是不确定的善，象上面所指出的那样，而我所追求的却不是在本性上不确定的善，（因为我要寻求的是持久的善，）只不过获得这种善的可能性却不很确定罢了。
 
-（二）我说“最后我就决意”这样做，因为初看起来，放弃确实可靠的
-
-东西，去追求那还不确定的东西，未免太不明智。我明知荣誉和财富的利益，
-
-倘若我要认真地去从事别的新的探讨，我就必须放弃对于这些利益的寻求。
-
-假如真正的最高幸福在于荣誉和财富，那末，我岂不是交臂失之，但假如真
-
-正的最高幸福不在于荣誉、财富，而我用全副精力去寻求它们，那末我也同
-
-样得不到最高的幸福。
-
-（三）因此我反复思索有没有可能找到一种新的生活目标，或者至少确
-
-定有没有新的生活目标的存在，而不致改变我素常生活的秩序和习惯，这是
-
-我所屡次尝试的，但总是没有成效。因为那些在生活中最常见，并且由人们
-
-的行为所表明，被当作是最高幸福的东西，归纳起来，大约不外三项：财富、
-
-荣誉、感官快乐。萦扰人们的心灵，使人们不能想到别的幸福的，就是这三
-
-种东西。
-
-（四）当人心沉溺于感官快系，直到安之若素，好象获得了真正的幸福
-
-时，它就会完全不能想到别的东西。但是当这种快乐一旦得到满足时，
-
-极大的苦恼立刻就随之而生。这样一来，人的心灵即使不完全
-
-丧失它的灵明，也必会感到困惑而拙钝。对于荣誉与财富的追求，特别是把
-
-它们当作自身目的，最足以使人陷溺其中，因为那样它们就被当作最高的
-
-善。
-
-（五）然而人心陷溺于荣誉的追求，特别强烈，因为荣誉总是被认为本
-
-身自足的善，为一切行为所趁赴的最后目的。而且我们获得荣誉与财富，不
-
-象获得感官快乐那样立刻就有苦恼与悔恨相随；反之，荣誉、财富获得愈多，
-
-则我们的愉快愈大，因而我们想要增加荣誉、财富的念头也就愈强烈。但是
-
-当我们的希望一旦感到沮丧时，极大的苦恼便跟着发生。荣誉还有一种缺点，
-
-就是为了追求荣誉，我们必须完全按照人们的意见生活，追求人们通常所追
-
-求的东西，规避人们通常所规避的东西。
-
-（六）现在我既然见到，所有这些东西实在是寻求别的新生活目标的障
-
-碍，而且不仅是障碍，实在是和它正相反对，势不两立，二者必去其一，因
-
-此我不能不考察一下，究竟哪一个对于我比较有益；因的，象前面所说过的，
-
-我好象是自愿放弃确定的善而去追求那不确定的东西。但是当我仔细思考之
-
-后，才确切地见到如果我放弃这些东西，来从事新的生活目标的探求，则我
-
-所放弃的就是按本性说是不确定的善，象上面所指出的那样，而我所追求的
-
-却不是在本性上不确定的善，（因为我要寻求的是持久的善，）只不过获得
-
-这种善的可能性却不很确定罢了。
-
-
+------------------------
 
 标 题: 讲个老爱的八卦笑话（9）
 
@@ -506,7 +428,7 @@ to experience,and with experience all our knowledge begins.
 谁说物理学家不懂赚钱的？这帮家伙精明着呢！
 
 
-
+------------------------
 
 
 标 题: 讲个老爱的八卦笑话（10）
@@ -533,7 +455,7 @@ http://216.120.242.82/~greensp/video.html
 
 再贴个pp，人名是全的，都写在相片下面了。
 
-
+------------------------
 
 标 题: 讲个老爱的八卦笑话（11）
 
@@ -547,9 +469,7 @@ http://216.120.242.82/~greensp/video.html
 
 1。每天跟各种稀奇古怪的专利打交道，接触的都是些动脑子的玩意儿。
 
-2。工作强度不大。基本上每天花几个小时的时间就能完成全天的工作量，
-
-剩下的时间就可以用来偷偷干别的。
+2。工作强度不大。基本上每天花几个小时的时间就能完成全天的工作量，剩下的时间就可以用来偷偷干别的。
 
 注意是“偷偷”哦
 
@@ -563,7 +483,7 @@ http://216.120.242.82/~greensp/video.html
 
 看来老天爷还是很公平的，不能总让他占便宜。
 
-
+------------------------
 
 发信人: neil (反面教材), 信区: Physics
 
@@ -583,7 +503,7 @@ http://216.120.242.82/~greensp/video.html
 
 所以，那些总拿老爱当挡箭牌的民科，在叫嚣之前请先看清楚自己和人家的差距。
 
-
+------------------------
 
 标 题: 讲个老爱的八卦笑话（13）
 
@@ -609,7 +529,7 @@ http://216.120.242.82/~greensp/video.html
 
 。。。。。。
 
-
+------------------------
 
 标 题: 讲个老爱的八卦笑话（14）
 
@@ -649,7 +569,7 @@ http://216.120.242.82/~greensp/video.html
 
 建议以后的自学者还是要尽可能的从正规课本开始学习。。。。。。。
 
-
+------------------------
 
 标 题: 讲个老爱的八卦笑话（15）
 
@@ -671,7 +591,7 @@ http://216.120.242.82/~greensp/video.html
 
 所以说，这世上有一种东西，叫做妒忌心。。。。。
 
-
+------------------------
 
 
 标 题: 讲个老爱的八卦笑话（16）
@@ -724,6 +644,7 @@ http://216.120.242.82/~greensp/video.html
 
 经常泄露造成很多人死亡.因此他才又设计了新的电冰箱,但因造价太贵,而且毒性较低的制冷剂已经开始使用,所以他那冰箱没有成批生产使用.^_^
 
+------------------------
 
 标 题: 讲个老爱的八卦笑话（收摊）
 
