--- a/朝花夕拾.md
+++ b/朝花夕拾.md
@@ -15,3 +15,16 @@ Sidney 颇有几句名言
 “If I have seen further than others, it is because I was standing in between the shoulders of dwarfs.”
 
 修高等电动力学的时候，讲到Jackson的经典电动力学第14章左右，有一个电子散射的习题最终是个积分，我怎么都积不出来，老师说积分可以查表啊，我查了一些表，发现科大出的一本蓝色封面积分手册有这个结果
+
+
+http://blog.sciencenet.cn/home.php?mod=space&uid=915&do=blog&id=2276
+
+3. Heisenberg
+Heisenberg在莱比锡大学的时候, 乒乓球打的很好, 球风彪悍, 无人可比. 后来Heisenberg多事, 招来了一名中国的博士后, 从此以后, 乒乓球只能屈居第二. 这个年轻人, 就叫周培源.
+
+4. Feynman
+除了Schwinger, 能让Feynman觉得是个人物的, 可能还有两个人. 第一个是Landau, Feynman在做液氦超流的时候, 对Landau欣赏的不的了. 1958年, 在荷兰的Leiden召开第六届世界低温物理学会, Feynman对同行说, 自己从一个会到另一个会, 就是为了想见到Landau, 可总是不如愿. (by the way, Landau不出国.) Feynman 说自己不得不做一些本来是应该Landau做的报告(I have to give the lecture which it was intended that Landau should give).
+
+在那次会议上, 苏联学者问Feynman, 为什么不在大学里呆着, 而宿在一个叫加州技校的地方. Feynman说, 那儿有两个人是great brains, 一个是理论物理学家Gell-Mann, 一个是实验物理学家Pellam. 我们知道在加州技校, Feynman和Gell-Mann互别粱子是出了名的, 这俩兄弟都怕在对方面前表现的像个idot.
+
+小花絮, 在那次会议上, 苏联学者邀请Feynman到苏联访问, Feynman说怕去了没饭吃. 苏联学者很尴尬, 说那都是宣传, 苏联其实不像你们想象的那么差. Feynman说偶不是那个意思, 偶是怕从苏联回来之后没饭吃.
